header html and css

--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
+
+<header class="header">
+    <div class="header_bar">
+        <a href="#" class="header_logo">FLATTY</a>
+
+        <ul class="header_menu">
+            <li><a href="#">already a member ?</a></li>
+            <li><a href="#">sign up</a></li>
+        </ul>
+    </div>
+
+    <div class="featured">
+        <div class="featured_content">
+            <h1>Make your landing page look really good</h1>
+        </div>
+        <div class="featured_content">
+            <img class="resp_image" src="assets/ipad-hand.png">
+        </div>
+    </div>
+</header>
 
 </body>
 </html>
