--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header class="header">
-    <div class="header_bar">
+    <div class="header_bar w-1150 wrapper clearfix">
         <a href="#" class="header_logo">FLATTY</a>
 
         <ul class="header_menu">
@@ -18,7 +18,7 @@
         </ul>
     </div>
 
-    <div class="featured">
+    <div class="featured w-1150 wrapper clearfix">
         <div class="featured_content">
             <h1>Make your landing page look really good</h1>
         </div>
@@ -27,6 +27,34 @@
         </div>
     </div>
 </header>
+
+
+<section class="products_heading w-1150 wrapper">
+    <h2>Your landing page looks wonderful now</h2>
+    <p class="color-grayish">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution</p>
+</section>
+
+<section class="products_row clearfix w-1150 wrapper">
+
+    <div class="product">
+        <img src="assets/ser01.png" alt="product 01" class="w-160 wrapper">
+        <h4 class="color-grayish">1 - Browser Compatibility</h4>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+    </div>
+
+    <div class="product">
+        <img src="assets/ser02.png" alt="product 01" class="w-160 wrapper">
+        <h4 class="color-grayish">2 - Email Campaigns</h4>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+    </div>
+
+    <div class="product">
+        <img src="assets/ser03.png" alt="product 01" class="w-160 wrapper">
+        <h4 class="color-grayish">3 - Gather Your Notes</h4>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+    </div>
+
+</section>
 
 </body>
 </html>
