subscription form html css

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     <div class="featured w-1150 wrapper clearfix">
         <div class="featured_content">
             <h1>Make your landing page look really good</h1>
+            <aside class="subscription_form clearfix">
+                <fieldset>
+                    <input placeholder="Enter your email address" type="email">
+                </fieldset>
+
+                <button class="btn btn-orange">Invite Me!</button>
+            </aside>
         </div>
         <div class="featured_content">
             <img class="resp_image" src="assets/ipad-hand.png">
@@ -54,6 +61,18 @@
         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
     </div>
 
+</section>
+
+<section class="w-1150 wrapper mid_section">
+    <hr class="ruler">
+       <aside class="subscription_form clearfix wrapper">
+           <fieldset>
+               <input placeholder="Enter your email address" type="email">
+           </fieldset>
+
+           <button class="btn btn-orange">Invite Me!</button>
+       </aside>
+    <hr class="ruler">
 </section>
 
 </body>
